css/styles.css
/* ... */
    
@media only screen and (min-width: 768px) {
    .features-item {
        width: calc((100% - 24px) / 2);
    }
}
@media only screen and (min-width: 1158px) {
    .features-item {
        width: calc((100% - 3 * 24px) / 4);
    }
}

.features-icon-box {
    display: none;
}
@media only screen and (min-width: 1158px) {
    .features-icon-box {
        display: flex;
        align-items: center;
        justify-content: center;
        border: 1px solid #8e8f99;
        border-radius: 4px;
        width: 264px;
        height: 112px;
        background-color: #f4f4fd;
        position: relative;
        margin-bottom: 8px;
    }
}

/* .features-icon {
    position: absolute;
    display: inline-block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
} */

.features-subtitle {
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    text-align: center;
}
@media only screen and (min-width: 768px) {
    .features-subtitle {
        text-align: left;
    }
}
@media only screen and (min-width: 1158px) {
    .features-subtitle {
        font-weight: 500;
        font-size: 20px;
        line-height: 1.2;
    }
}

/* #endregion */

/* #region Team Section */

.team-section {
    background-color: #f4f4fd;
}
.team-container {
    padding: 0 28px;
}
@media only screen and (min-width: 768px) {
    .team-container {
    padding: 0 108px; 
}
}
@media only screen and (min-width: 1158px) {
    .team-container {padding: 0 15px;
    }
}

@media only screen and (min-width: 768px) {
    .team-list {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        gap: 24px;
    }
}
.team-card {
    background-color: #fff;
    border-radius: 0 0 4px 4px;
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}
@media only screen and (min-width: 768px) {
    .team-card {
        margin: 0;
        width: calc((100% - 24px) / 2);
    }
}
@media only screen and (min-width: 1158px) {
    .team-card {
        width: calc((100% - 3 * 24px) / 4);
    }
}
.team-card:last-child {
    margin-bottom: 0;
}

.team-card-descr {
    padding: 32px 0;
}

.team-name,
.team-position {
    text-align: center;
}

.team-position {
    margin-bottom: 8px;
}
.team-card-socials {
    gap: 24px;
    justify-content: center;
}


.socials-link:hover, .socials-link:focus {
    background-color: #404bbf;
}
/* #endregion */

/* #region Portfolio Section */
@media only screen and (min-width: 768px) {
    .portfolio-list {
        display: flex;
        flex-wrap: wrap;
        row-gap: 72px;
        column-gap: 24px;
    }

}
@media only screen and (min-width: 1158px) {
    .portfolio-list {
        row-gap: 48px;
    }
}


.portfolio-item-img-box {
    position: relative;
    overflow: hidden;
}

.portfolio-item-overlay {
    position: absolute;
    background-color: #4d5ae5;
    color: #f4f4fd;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 40px 32px;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio-item:hover .portfolio-item-overlay {
    transform: translateY(0);
}

.portfolio-item {
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

@media only screen and (max-width: 767px) {
    .portfolio-item {
        margin-bottom: 48px;
    }
}

@media only screen and (min-width: 768px) {
    .portfolio-item {
        width: calc((100% - 24px) / 2);
}
}

@media only screen and (min-width: 1158px) {
    .portfolio-item {
        width: calc((100% - 48px) / 3);
    }
}

.portfolio-item:hover {
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.portfolio-text {
    border-bottom: 1px solid #e7e9fc;
    border-left: 1px solid #e7e9fc;
    border-right: 1px solid #e7e9fc;
    padding: 32px 16px;
}
/* #endregion */

/* #region Footer Section */

.footer {
    background-color: #2e2f42;
    padding: 96px 0;
}
@media only screen and (max-width: 768px) {
    .footer {
        padding: 96px 0;
    }
}
@media only screen and (min-width: 1158px) {
    .footer {
        padding-top: 100px;
        padding-bottom: 100px;
    }
}

.footer-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 72px;
    padding: 0 16px;
}
@media only screen and (min-width: 768px) {
    .footer-container {
        flex-direction: row;
        flex-wrap: wrap;
        column-gap: 24px;
        align-items: baseline; 
    }
}

@media only screen and (min-width: 1158px) {
    .footer-container {
        flex-wrap: nowrap;
        gap: 0;
    }
}

.footer-logo-box {
    max-width: 264px;
}
/* @media only screen and (min-width: 1158px){
    .footer-logo-box {
        margin-right: 120px;
    }
} */

.footer-logo {
    display: block;
    margin-bottom: 16px;
    text-align: center; 
}
@media only screen and (min-width: 768px) {
    .footer-logo {
        display: inline-block;
    }
}


.logo-accent-light {color:#f4f4fd;}

.footer-text {
    color: #f4f4fd;
}

.footer-box-header {
    margin-bottom: 16px;
    font-weight: 500;
    color: #fff;
    text-align: center;
}

@media only screen and (min-width: 768px) {
    .footer-box-header {
        text-align: left;
    }
}

.footer-socials-list {
    gap: 16px;
    justify-content: center;
}
.footer .socials-link:hover, .footer .socials-link:focus {
    background-color: #31d0aa;
}


/* @media only screen and (min-width: 1158px) {
    .footer-subscribe-box {
        margin-left: 80px;
    }
} */


.footer-form {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    justify-content: center;
}

@media only screen and (min-width: 768px) {
    .footer-form {
            flex-wrap: nowrap;
            gap: 24px; 
            justify-content: start;
        }
}

.subscribe-label {
    display: block;
}
/* ... */

